# personal-agent

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  scheduler.sh
config/: sources.yaml
doc/: BASELINE.md  DESIGN.md  DESIGN_MULTI_USER.md  DESIGN_SERVICE_LAYER.md  DOCSTRING_STYLE.md  PERSONAL_AGENT_GOAL.md  PERSONAL_AGENT_IMPROVEMENT_PROMPT.md  PIPELINE_METRICS.md  RESEARCH_AGENT_MEMORY_2026.md  USER_GUIDE.md  WECHAT_OPENCLAW.md  metrics-baseline-2026-07-17.json
docs/: quickstart.html
openclaw-plugin/: index.js  openclaw.plugin.json  package.json  test.mjs
openclaw-plugin-spike/: README.md  index.js  openclaw.plugin.json  package.json  验证指南.md
scripts/: daily-run.sh  review_plan.py  self-improve.sh  self_improve_evidence.py  self_improve_prompt.md  weekly-consolidate.sh
skills/: README.md
systemd/: personal-agent.service  personal-agent.timer
test/: conftest.py  test_actions.py  test_admin.py  test_admin_actions_guard.py  test_announce.py  test_boundary.py  test_chat.py  test_chat_slack.py  test_collectors.py  test_config.py  test_dispatch.py  test_email_render.py  test_enrich.py  test_events_store.py  test_evolve.py  test_finance.py  test_global_evolve.py  test_handlers_multitenant.py  test_health.py  test_identity.py  test_init.py  test_jobs.py  test_judge_quota.py  test_llm_roles.py  test_locks.py  test_locks_concurrency.py  test_marks.py  test_metrics.py  test_notify.py  test_onboarding.py  test_profile_store.py  test_profile_v2.py  test_registry.py  test_research.py  test_resume.py  test_review_plan.py  test_routines.py  test_search.py  (+16 more)
(+155 files in other folders)
