[project]
name = "personal-assistant-agent"
version = "0.1.0"
description = "Daily self-assistant: profile maintenance, GitHub digest, research digest, resume sync"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "langgraph>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "tenacity>=8.2",
]

[project.scripts]
assistant = "assistant.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["assistant*"]
